--- a/.github/workflows/push-images-to-quay.yaml
+++ b/.github/workflows/push-images-to-quay.yaml
@@ -7,6 +7,7 @@ jobs:
   build:
     env:
       image_name: konflux-tooling
+      repository: 'quay.io/${{ secrets.REGISTRY_REPOSITORY }}/${image_name}'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
@@ -15,19 +16,22 @@ jobs:
         id: image_tags
         run: |
           echo -n ::set-output name=IMAGE_TAGS::
-          TAGS=('latest')
-          TAGS+=("${GITHUB_SHA}")
-          TAGS+=("${GITHUB_SHA:0:7}")
+            TAGS=("${{ env.repository }}:latest")
+            TAGS+=("${{ env.repository }}:${GITHUB_SHA}")
+            TAGS+=("${{ env.repository }}:${GITHUB_SHA:0:7}")
           ( IFS=$','; echo "${TAGS[*]}" )
 
+      - name: Login to Quay.io
+        uses: docker/login-action@v3
+        with:
+          registry: quay.io
+          username: ${{ secrets.REGISTRY_USERNAME }}
+          password: ${{ secrets.REGISTRY_PASSWORD }}
+
       - name: Build and publish image to Quay
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v6
         with:
           context: .
           file: Containerfile
           push: true
-          registry: quay.io
-          repository: ${{ secrets.REGISTRY_REPOSITORY }}/${{ env.image_name }}
-          username: ${{ secrets.REGISTRY_USERNAME }}
-          password: ${{ secrets.REGISTRY_PASSWORD }}
           tags: "${{ steps.image_tags.outputs.IMAGE_TAGS }}"
